Add initial auth servlet, create dev.galasa.framework.api.common package
Signed-off-by: Eamonn Mansour <47121388+eamansour@users.noreply.github.com>

--- a/galasa-parent/dev.galasa.framework.api.common/build.gradle
+++ b/galasa-parent/dev.galasa.framework.api.common/build.gradle
@@ -1,20 +1,14 @@
 plugins {
     id 'biz.aQute.bnd.builder'
     id 'galasa.api.server'
-
-    id 'java'
 }
 
-description = 'Galasa Authentication API'
+description = 'Framework API - Common Packages'
 
 version = '0.30.0'
 
 dependencies {
     implementation project(':dev.galasa.framework')
-    implementation project(':dev.galasa.framework')
-    implementation project(':dev.galasa.framework.api.common')
-
-    // implementation 'com.auth0:java-jwt:3.19.1'
 }
 
 // Note: These values are consumed by the parent build process
@@ -28,5 +22,5 @@ ext.includeInMVP          = false
 ext.includeInIsolated     = true
 ext.includeInBOM          = false
 ext.includeInCodeCoverage = true
-ext.includeInJavadoc      = false
+ext.includeInJavadoc      = true
 
