--- a/galasa-parent/dev.galasa.framework.api.ras/build.gradle
+++ b/galasa-parent/dev.galasa.framework.api.ras/build.gradle
@@ -13,10 +13,10 @@ version '0.29.0'
 
 dependencies {
     implementation project(':dev.galasa.framework')
-    // implementation project(':dev.galasa.framework.api.common')
+    implementation project(':dev.galasa.framework.api.common')
 
     implementation 'org.apache.commons:commons-collections4:4.4'
-    
+
     testCompile 'org.apache.commons:commons-lang3:3.12.0'
     testCompile project(':dev.galasa.framework').sourceSets.test.output
 }
@@ -38,7 +38,7 @@ openApiGenerate {
 // Note: These values are consumed by the parent build process
 // They indicate which packages of functionality this OSGi bundle should be delivered inside,
 // or referenced from.
-// The settings here are gathered together by the build process to create a release.yaml file 
+// The settings here are gathered together by the build process to create a release.yaml file
 // which gathers-up all the packaging metadata about all the OSGi bundles in this component.
 ext.projectName=project.name
 ext.includeInOBR          = true
