--- a/galasa-parent/dev.galasa.framework.api.authentication/build.gradle
+++ b/galasa-parent/dev.galasa.framework.api.authentication/build.gradle
@@ -11,10 +11,10 @@ version = '0.30.0'
 
 dependencies {
     implementation project(':dev.galasa.framework')
-    implementation project(':dev.galasa.framework')
     implementation project(':dev.galasa.framework.api.common')
 
     // implementation 'com.auth0:java-jwt:3.19.1'
+    testImplementation(testFixtures(project(':dev.galasa.framework.api.common')))
 }
 
 // Note: These values are consumed by the parent build process
