--- a/galasa-parent/dev.galasa.framework.api.common/build.gradle
+++ b/galasa-parent/dev.galasa.framework.api.common/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id 'biz.aQute.bnd.builder'
     id 'galasa.api.server'
+
+    id 'java-test-fixtures'
 }
 
 description = 'Framework API - Common Packages'
@@ -9,6 +11,10 @@ version = '0.30.0'
 
 dependencies {
     implementation project(':dev.galasa.framework')
+
+    testFixturesImplementation 'javax.servlet:javax.servlet-api:3.1.0'
+    testFixturesImplementation 'org.assertj:assertj-core:3.16.1'
+    testFixturesImplementation 'com.google.code.gson:gson:2.8.9'
 }
 
 // Note: These values are consumed by the parent build process
