--- a/galasa-parent/dev.galasa.framework.api.ras/build.gradle
+++ b/galasa-parent/dev.galasa.framework.api.ras/build.gradle
@@ -19,6 +19,7 @@ dependencies {
 
     testCompile 'org.apache.commons:commons-lang3:3.12.0'
     testCompile project(':dev.galasa.framework').sourceSets.test.output
+    testImplementation(testFixtures(project(':dev.galasa.framework.api.common')))
 }
 
 openApiGenerate {
