--- a/galasa-parent/dev.galasa.framework.api.authentication/build.gradle
+++ b/galasa-parent/dev.galasa.framework.api.authentication/build.gradle
@@ -13,7 +13,7 @@ dependencies {
     implementation project(':dev.galasa.framework')
     implementation project(':dev.galasa.framework.api.common')
 
-    // implementation 'com.auth0:java-jwt:3.19.1'
+    implementation 'com.auth0:java-jwt:3.19.1'
     testImplementation(testFixtures(project(':dev.galasa.framework.api.common')))
 }
 
