--- a/galasa-parent/dev.galasa.framework.api.runs/build.gradle
+++ b/galasa-parent/dev.galasa.framework.api.runs/build.gradle
@@ -9,7 +9,8 @@ description = 'Galasa Runs API'
 version = '0.25.0'
 
 dependencies {
-    implementation project(':dev.galasa.framework')   
+    implementation project(':dev.galasa.framework')
+    implementation project(':dev.galasa.framework.api.common')
 }
 
 openApiGenerate {
