--- a/galasa-parent/dev.galasa.framework.api.runs/build.gradle
+++ b/galasa-parent/dev.galasa.framework.api.runs/build.gradle
@@ -11,6 +11,7 @@ version = '0.25.0'
 dependencies {
     implementation project(':dev.galasa.framework')
     implementation project(':dev.galasa.framework.api.common')
+    implementation project(':dev.galasa.framework.api.authentication')
     testImplementation(testFixtures(project(':dev.galasa.framework.api.common')))
 }
 
