Add Maven Publication and Signing back in
Signed-off-by: Jade Carino <carino_jade@yahoo.co.uk>

--- a/galasa-parent/build.gradle
+++ b/galasa-parent/build.gradle
@@ -3,7 +3,8 @@ plugins {
     id 'biz.aQute.bnd.builder' version '5.3.0' apply false
     id 'dev.galasa.githash' version '0.15.0' apply false
     id 'jacoco'
-    // id 'maven-publish'
+    id 'maven-publish'
+    id 'signing'
 }
 
 // Note: The following line is changed by the set-version.sh script.
@@ -17,6 +18,14 @@ repositories {
         url "https://development.galasa.dev/main/maven-repo/obr/"
     }
     mavenLocal()
+}
+
+signing {
+    sign publishing.publications
+}
+
+tasks.withType(Sign) {
+    onlyIf { isMainOrRelease.toBoolean() }
 }
 
 dependencies {
@@ -248,59 +257,58 @@ def myReleaseYaml = artifacts.add('release_metadata', file(overallManifestFilePa
 
 // Publish the release.yaml as a maven artifact.
 // Note: The maven co-ordinates are versioned using the version for this bundle.
-// Commenting out for now.
-// publishing {
+publishing {
    
-//     publications {
+    publications {
 
-//         // Publish the component manifest/release.yaml
-//         publishReleaseManifestYaml(MavenPublication) {
-//             artifact myReleaseYaml
+        // Publish the component manifest/release.yaml
+        publishReleaseManifestYaml(MavenPublication) {
+            artifact myReleaseYaml
 
-//             pom {
-//                 name = "Manifest for framework bundle versions"
-//                 artifactId = "dev.galasa.framework.manifest"
-//                 groupId = 'dev.galasa'
-//                 version = version
-//                 description = "Conveys bundle version information to OBR builds."
-//                 licenses {
-//                     license {
-//                         name = 'Eclipse Public License - v 2.0'
-//                         url = 'https://www.eclipse.org/legal/epl-2.0/t'
-//                     }
-//                 }
-//                 url = 'https://galasa.dev'
-//                 developers {
-//                     developer {
-//                         name = 'Galasa Developer'
-//                         email = 'galasadelivery@ibm.com'
-//                         organization = 'IBM'
-//                         organizationUrl = 'https://www.ibm.com'
-//                     }
-//                 }
-//                 scm {
-//                     connection = 'scm:git:git:://github.com/galasa-dev/framework'
-//                     developerConnection = 'scm:git:git:://github.com/galasa-dev/framework'
-//                     url = 'https://github.com/galasa-dev/framework'
-//                 }
-//                 issueManagement {
-//                     system = 'GitHub'
-//                     url = 'https://github.com/galasa-dev/projectmanagement/issues'
-//                 }
-//             }
+            pom {
+                name = "Manifest for framework bundle versions"
+                artifactId = "dev.galasa.framework.manifest"
+                groupId = 'dev.galasa'
+                version = version
+                description = "Conveys bundle version information to OBR builds."
+                licenses {
+                    license {
+                        name = 'Eclipse Public License - v 2.0'
+                        url = 'https://www.eclipse.org/legal/epl-2.0/t'
+                    }
+                }
+                url = 'https://galasa.dev'
+                developers {
+                    developer {
+                        name = 'Galasa Developer'
+                        email = 'galasadelivery@ibm.com'
+                        organization = 'IBM'
+                        organizationUrl = 'https://www.ibm.com'
+                    }
+                }
+                scm {
+                    connection = 'scm:git:git:://github.com/galasa-dev/framework'
+                    developerConnection = 'scm:git:git:://github.com/galasa-dev/framework'
+                    url = 'https://github.com/galasa-dev/framework'
+                }
+                issueManagement {
+                    system = 'GitHub'
+                    url = 'https://github.com/galasa-dev/projectmanagement/issues'
+                }
+            }
 
-//         }
-//     }
-//     repositories {
-//         maven {
-//             url  = "$targetMaven"
+        }
+    }
+    repositories {
+        maven {
+            url  = "$targetMaven"
         
-//             if ("$targetMaven".startsWith('http')) {
-//                 credentials {
-//                     username System.getenv('MAVENUSERNAME')
-//                     password System.getenv('MAVENPASSWORD')
-//                 }
-//             }
-//         }
-//     }
-// }
+            if ("$targetMaven".startsWith('http')) {
+                credentials {
+                    username System.getenv('MAVENUSERNAME')
+                    password System.getenv('MAVENPASSWORD')
+                }
+            }
+        }
+    }
+}
