updated eclipse license in gradle files
Signed-off-by: Holly Hunt <holly.hunt1101@hotmail.com>

--- a/galasa-parent/build.gradle
+++ b/galasa-parent/build.gradle
@@ -274,7 +274,7 @@ version = "0.31.0"
                 licenses {
                     license {
                         name = 'Eclipse Public License - v 2.0'
-                        url = 'https://www.eclipse.org/legal/epl-2.0/t'
+                        url = 'https://www.eclipse.org/legal/epl-2.0'
                     }
                 }
                 url = 'https://galasa.dev'
