--- a/galasa-parent/buildSrc/src/main/groovy/galasa.java.gradle
+++ b/galasa-parent/buildSrc/src/main/groovy/galasa.java.gradle
@@ -77,7 +77,7 @@ publishing {
                 licenses {
                     license {
                         name = 'Eclipse Public License - v 2.0'
-                        url = 'https://www.eclipse.org/legal/epl-2.0/t'
+                        url = 'https://www.eclipse.org/legal/epl-2.0'
                     }
                 }
                 developers {
