--- a/release.yaml
+++ b/release.yaml
@@ -116,6 +116,12 @@ api:
     isolated: true
     codecoverage: true
 
+  - artifact: dev.galasa.framework.api.resources
+    version: 0.31.0
+    obr: true
+    isolated: true
+    codecoverage: true
+
   - artifact: dev.galasa.framework.api.runs
     version: 0.31.0
     obr: true
