--- a/galasa-parent/dev.galasa.framework.api.resources/build.gradle
+++ b/galasa-parent/dev.galasa.framework.api.resources/build.gradle
@@ -14,6 +14,7 @@ version '0.31.0'
 dependencies {
     implementation project(':dev.galasa.framework')
     implementation project(':dev.galasa.framework.api.common')
+    implementation project(':dev.galasa.framework.api.cps')
 
     implementation 'org.apache.commons:commons-collections4:4.4'
 
