--- a/galasa-parent/dev.galasa.framework.api.authentication/build.gradle
+++ b/galasa-parent/dev.galasa.framework.api.authentication/build.gradle
@@ -7,12 +7,13 @@ plugins {
 
 description = 'Galasa Authentication API'
 
-version = '0.30.0'
+version = '0.31.0'
 
 dependencies {
     implementation project(':dev.galasa.framework')
     implementation project(':dev.galasa.framework.api.common')
 
+    implementation 'org.apache.commons:commons-lang3:3.12.0'
     implementation 'dev.galasa:com.auth0.jwt:4.4.0'
     testImplementation(testFixtures(project(':dev.galasa.framework.api.common')))
 }
