Added dev.galasa.framework.api.openapi to hold the yaml file.
Signed-off-by: Mike Cobbett <77053+techcobweb@users.noreply.github.com>

--- a/galasa-parent/settings.gradle
+++ b/galasa-parent/settings.gradle
@@ -26,6 +26,7 @@ include 'dev.galasa.framework.api.common'
 include 'dev.galasa.framework.api.cps'
 include 'dev.galasa.framework.api.health'
 include 'dev.galasa.framework.api.launcher'
+include 'dev.galasa.framework.api.openapi'
 include 'dev.galasa.framework.api.ras'
 include 'dev.galasa.framework.api.resources'
 include 'dev.galasa.framework.api.runs'
