--- a/release.yaml
+++ b/release.yaml
@@ -110,6 +110,13 @@ api:
     isolated: true
     codecoverage: true
 
+  - artifact: dev.galasa.framework.api.openapi
+    version: 0.31.0
+    obr: true
+    isolated: true
+    mvp: true
+    codecoverage: true
+
   - artifact: dev.galasa.framework.api.ras
     version: 0.29.0
     obr: true
