generate pojo beans from openapi document
Signed-off-by: Mike Cobbett <77053+techcobweb@users.noreply.github.com>

--- a/galasa-parent/dev.galasa.framework.api.openapi/build.gradle
+++ b/galasa-parent/dev.galasa.framework.api.openapi/build.gradle
@@ -25,9 +25,10 @@ configurations {
 // Validating a single specification
 openApiValidate {
     inputSpec.set("$projectDir/src/main/resources/openapi.yaml")
+    recommend.set(true)
 }
 
-tasks.named('build') { 
+tasks.named('processResources') { 
     dependsOn('openApiValidate') 
 }
 
