added import for jwts
Signed-off-by: Holly Hunt <holly.hunt1101@hotmail.com>

--- a/galasa-parent/dev.galasa.framework.api.authentication/build.gradle
+++ b/galasa-parent/dev.galasa.framework.api.authentication/build.gradle
@@ -14,6 +14,8 @@ dependencies {
     implementation project(':dev.galasa.framework.api.common')
 
     implementation 'dev.galasa:com.auth0.jwt:4.4.0'
+    implementation 'com.auth0:java-jwt:4.4.0'
+    
     testImplementation(testFixtures(project(':dev.galasa.framework.api.common')))
 }
 
