Add client to manually-maintained release.yaml file also
Signed-off-by: Mike Cobbett <77053+techcobweb@users.noreply.github.com>

--- a/release.yaml
+++ b/release.yaml
@@ -145,3 +145,10 @@ api:
     version: 0.32.0
     obr: true
     isolated: true
+
+  - artifact: dev.galasa.framework.api.client
+    version: 0.32.0
+    obr: true
+    bom: true
+    mvp: true
+    isolated: true
