Add .jar files to .gitignore
Signed-off-by: Jade Carino <carino_jade@yahoo.co.uk>

--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,7 @@ build/
 **/.idea/
 **/heapdump*
 docs/generated/
+**/*.jar
 
 # A folder scripts can put things into without fear of them being checked-in.
 temp/
