--- a/galasa-parent/dev.galasa.framework.k8s.controller/build.gradle
+++ b/galasa-parent/dev.galasa.framework.k8s.controller/build.gradle
@@ -5,14 +5,19 @@ plugins {
 
 description = 'Galasa Kubernetes Controller'
 
-version '0.29.0'
+version '0.32.0'
 
 dependencies {
 
     implementation project(':dev.galasa')
     implementation project(':dev.galasa.framework')
     
-    implementation 'commons-codec:commons-codec:1.15'
+    implementation 'commons-codec:commons-codec:1.16.1'
+    implementation ('org.apache.commons:commons-compress') {
+        version {
+            strictly '1.26.0'
+        }
+    }
 
     implementation 'io.prometheus:simpleclient:0.15.0'
     implementation 'io.prometheus:simpleclient_httpserver:0.15.0'
