changed list of developers to one galasa contributors for maintainability
Signed-off-by: Holly Hunt <holly.hunt1101@hotmail.com>

--- a/galasa-parent/buildSrc/src/main/groovy/galasa.java.gradle
+++ b/galasa-parent/buildSrc/src/main/groovy/galasa.java.gradle
@@ -82,40 +82,10 @@ publishing {
                 }
                 developers {
                     developer {
-                        name = 'Michael Baylis'
-                        email = 'Michael.Baylis@uk.ibm.com'
-                        organization = 'IBM'
-                        organizationUrl = 'https://www.ibm.com'
-                    }
-                    developer {
-                        name = 'William Yates'
-                        email = 'wyates@uk.ibm.com'
-                        organization = 'IBM'
-                        organizationUrl = 'https://www.ibm.com'
-                    }
-                    developer {
-                        name = 'David Roberts'
-                        email = 'david.roberts@uk.ibm.com'
-                        organization = 'IBM'
-                        organizationUrl = 'https://www.ibm.com'
-                    }
-                    developer {
-                        name = 'James Davies'
-                        email = 'james.davies@ibm.com'
-                        organization = 'IBM'
-                        organizationUrl = 'https://www.ibm.com'
-                    }
-                    developer {
-                        name = 'Kees Jansen'
-                        email = 'kees.jansen@ibm.com'
-                        organization = 'IBM'
-                        organizationUrl = 'https://www.ibm.com'
-                    }
-                    developer {
-                        name = 'Jade Carino'
-                        email = 'jade.carino@ibm.com'
-                        organization = 'IBM'
-                        organizationUrl = 'https://www.ibm.com'
+                        name = 'Galasa Contributors'
+                        email = 'galasadelivery@ibm.com'
+                        organization = 'Linux Foundation'
+                        organizationUrl = 'https://github.com/galasa-dev'
                     }
                 }
                 scm {
