--- a/release.yaml
+++ b/release.yaml
@@ -111,7 +111,7 @@ api:
     codecoverage: true
 
   - artifact: dev.galasa.framework.api.openapi
-    version: 0.32.0
+    version: 0.34.0
     obr: true
     isolated: true
     mvp: true
@@ -151,3 +151,4 @@ api:
     obr: true
     bom: true
     mvp: true
+isolated: true
