--- a/galasa-parent/galasa-boot/build.gradle
+++ b/galasa-parent/galasa-boot/build.gradle
@@ -15,11 +15,14 @@ configurations {
 
 }
 
-version = '0.31.0'
+version = '0.34.0'
 
 jar {
     manifest {
-        attributes "Main-Class": "dev.galasa.boot.Launcher"
+        attributes (
+            "Main-Class": "dev.galasa.boot.Launcher",
+            "-fixupmessages": '"Classes found in the wrong directory"; restrict:=error; is:=warning'
+        )
     }
     into ('/bundle') {
         from configurations.bundleDependency
@@ -48,7 +51,7 @@ dependencies {
     implementation 'org.apache.felix:org.apache.felix.scr:2.1.14'
 
     embedImplementation 'commons-cli:commons-cli:1.4'
-    embedImplementation 'commons-io:commons-io:2.9.0'
+    embedImplementation 'commons-io:commons-io:2.16.1'
 
     bundleDependency 'org.apache.felix:org.apache.felix.bundlerepository:2.0.2'
     bundleDependency 'org.apache.felix:org.apache.felix.scr:2.1.14'
