--- a/galasa-parent/dev.galasa.framework.api.authentication/build.gradle
+++ b/galasa-parent/dev.galasa.framework.api.authentication/build.gradle
@@ -12,6 +12,7 @@ version = '0.34.0'
 
 dependencies {
     implementation project(':dev.galasa.framework')
+    implementation project(':dev.galasa.framework.api.beans')
     implementation project(':dev.galasa.framework.api.common')
 
     implementation 'org.apache.commons:commons-lang3:3.14.0'
