--- a/galasa-parent/dev.galasa.framework.api/build.gradle
+++ b/galasa-parent/dev.galasa.framework.api/build.gradle
@@ -14,7 +14,7 @@ dependencies {
     implementation 'org.osgi:org.osgi.service.cm:1.6.0'
     implementation 'org.apache.felix:org.apache.felix.bundlerepository:2.0.2'
 
-    testCompile project(':dev.galasa.framework').sourceSets.test.output
+    testImplementation project(':dev.galasa.framework').sourceSets.test.output
 }
 
 // Note: These values are consumed by the parent build process
