Move auth store initialisation into API server only (#553)
* Add initial ApiServerInitialisation with auth store, add api.extra.bundles prop

Signed-off-by: Eamonn Mansour <47121388+eamansour@users.noreply.github.com>

* Move common test helper methods into base class

Signed-off-by: Eamonn Mansour <47121388+eamansour@users.noreply.github.com>

* Add constant for framework.extra.bundles bootstrap property

Signed-off-by: Eamonn Mansour <47121388+eamansour@users.noreply.github.com>

* Add initial unit tests for loading API bundles in the FelixFramework

Signed-off-by: Eamonn Mansour <47121388+eamansour@users.noreply.github.com>

* Move FelixFramework constructor used in tests to mock/test subclass

Signed-off-by: Eamonn Mansour <47121388+eamansour@users.noreply.github.com>

---------

Signed-off-by: Eamonn Mansour <47121388+eamansour@users.noreply.github.com>

--- a/galasa-parent/dev.galasa.framework.api/build.gradle
+++ b/galasa-parent/dev.galasa.framework.api/build.gradle
@@ -5,7 +5,7 @@ plugins {
 
 description = 'Framework API'
 
-version = '0.27.0'
+version = '0.34.0'
 
 dependencies {
 
@@ -14,6 +14,7 @@ dependencies {
     implementation 'org.osgi:org.osgi.service.cm:1.6.0'
     implementation 'org.apache.felix:org.apache.felix.bundlerepository:2.0.2'
 
+    testImplementation project(':dev.galasa.framework').sourceSets.test.output
 }
 
 // Note: These values are consumed by the parent build process
