--- a/galasa-parent/dev.galasa.framework.api.authentication/build.gradle
+++ b/galasa-parent/dev.galasa.framework.api.authentication/build.gradle
@@ -2,6 +2,8 @@ plugins {
     id 'biz.aQute.bnd.builder'
     id 'galasa.api.server'
     id "com.google.protobuf" version "0.9.4"
+    id 'pmd'
+    id("com.github.spotbugs") version "4.7.0"
 
     id 'java'
 }
