--- a/release.yaml
+++ b/release.yaml
@@ -111,7 +111,7 @@ api:
     codecoverage: true
 
   - artifact: dev.galasa.framework.api.openapi
-    version: 0.34.0
+    version: 0.34.1
     obr: true
     isolated: true
     mvp: true
@@ -146,3 +146,4 @@ api:
     obr: true
     bom: true
     mvp: true
+    isolated: true
