--- a/galasa-parent/dev.galasa.framework/build.gradle
+++ b/galasa-parent/dev.galasa.framework/build.gradle
@@ -23,6 +23,7 @@ dependencies {
     implementation 'org.apache.bcel:bcel:6.7.0'
     implementation 'commons-io:commons-io:2.16.1'
     implementation 'com.google.code.gson:gson:2.10.1'
+    implementation 'com.mikesamuel:json-sanitizer:1.2.3'
 
     testImplementation project (':dev.galasa')
 
