upgraded java version and removed deprecated gradle functions
Signed-off-by: Holly Hunt <holly.hunt1101@hotmail.com>

--- a/galasa-parent/dev.galasa.framework.api.bootstrap/build.gradle
+++ b/galasa-parent/dev.galasa.framework.api.bootstrap/build.gradle
@@ -11,8 +11,8 @@ dependencies {
     implementation project(':dev.galasa.framework')
     implementation project(':dev.galasa.framework.api.common')
 
-    testCompile 'org.apache.commons:commons-lang3:3.14.0'
-    testCompile project(':dev.galasa.framework').sourceSets.test.output
+    testImplementation 'org.apache.commons:commons-lang3:3.14.0'
+    testImplementation project(':dev.galasa.framework').sourceSets.test.output
     testImplementation(testFixtures(project(':dev.galasa.framework.api.common')))
 }
 
