--- a/galasa-parent/dev.galasa.framework.api.ras/build.gradle
+++ b/galasa-parent/dev.galasa.framework.api.ras/build.gradle
@@ -2,9 +2,6 @@ plugins {
     id 'biz.aQute.bnd.builder'
     id 'org.openapi.generator' version "5.0.1"
     id 'galasa.api.server'
-
-    // testCompile requires Java plugin.
-    id 'java'
 }
 
 description = 'Galasa API - RAS'
@@ -17,8 +14,8 @@ dependencies {
 
     implementation 'org.apache.commons:commons-collections4:4.4'
 
-    testCompile 'org.apache.commons:commons-lang3:3.14.0'
-    testCompile project(':dev.galasa.framework').sourceSets.test.output
+    testImplementation 'org.apache.commons:commons-lang3:3.14.0'
+    testImplementation project(':dev.galasa.framework').sourceSets.test.output
     testImplementation(testFixtures(project(':dev.galasa.framework.api.common')))
 }
 
