Separate external User bean from internal use, use Dex user ID to revoke tokens instead of JWT claim
Signed-off-by: Eamonn Mansour <47121388+eamansour@users.noreply.github.com>

--- a/galasa-parent/dev.galasa.framework.api.common/build.gradle
+++ b/galasa-parent/dev.galasa.framework.api.common/build.gradle
@@ -17,6 +17,7 @@ dependencies {
     testFixturesImplementation 'org.assertj:assertj-core:3.16.1'
     testFixturesImplementation 'com.google.code.gson:gson:2.10.1'
     testFixturesImplementation(project(':dev.galasa.framework'))
+    testFixturesImplementation(project(':dev.galasa.framework.api.beans'))
     testFixturesImplementation 'javax.validation:validation-api:2.0.1.Final'
 
 }
