edited pr build
Signed-off-by: dhruv <dhruvj797@gmail.com>

--- a/.github/workflows/pr-build.yaml
+++ b/.github/workflows/pr-build.yaml
@@ -19,7 +19,7 @@ jobs:
                docker run \
                --rm \ 
                ghcr.io/jaydee029/openapi2beans:main \
-               v ${{ github.workspace }}:/workspace/git \ 
+               -v ${{ github.workspace }}:/workspace/git \ 
                generate \
                --yaml /workspace/git/${{ env.YAML_LOCATION }} \  
                --output /workspace/git/${{ env.OUTPUT_LOCATION }} \ 
