--- a/.github/workflows/pr-build.yaml
+++ b/.github/workflows/pr-build.yaml
@@ -16,10 +16,7 @@ jobs:
             
             - name: Build openapi2beans
               run: |
-               docker run \
-               --rm \ 
-               ghcr.io/jaydee029/openapi2beans:main \
-               -v ${{ github.workspace }}:/workspace/git \ 
+               docker run --rm ghcr.io/jaydee029/openapi2beans:main -v ${{ github.workspace }}:/workspace/git \ 
                generate \
                --yaml /workspace/git/${{ env.YAML_LOCATION }} \  
                --output /workspace/git/${{ env.OUTPUT_LOCATION }} \ 
